--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-*.agdai
+node_modules
+bower_components
+build
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+pids
+logs
+results
+npm-debug.log
+.idea
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
